--- a/public/css/produtos.css
+++ b/public/css/produtos.css
@@ -1,5 +1,4 @@
 
-  
   .cxproduto h1 {
     text-align: center;
     color: #333;
@@ -54,7 +53,7 @@
   
   .cxproduto h1{
     text-align: center;
-      color: #333;
+    color: #333;
     text-align: center;
     color: #333;
   }
@@ -76,44 +75,43 @@
     background-color: #0056b3;
   }
   
-  .cxproduto #image-preview {
+  .cxproduto #imagepreview {
     margin-top: 20px;
     text-align: center;
   }
   
-  .cxproduto #image-preview img {
+  .cxproduto #imagepreview img {
     max-width: 100%;
     height: auto;
     border-radius: 4px;
   }
-  .cxproduto.botão-escolher-imagem{
+  .cxproduto.botãoescolherimagem{
     padding:3px;
     background-color: #0056b3;
   }
-  .cadastrar-produtos{
-    display: block;
-  
+  .cadastrarprodutos{
+    display: none;
   }
-  .cadastrar-produtos body{
+  .cadastrarprodutos body{
     font-family: Arial, sans-serif;
     padding: 20px;
   }
   
-  .cadastrar-produtos h1{
+  .cadastrarprodutos h1{
     color: #333;
   }
   
-  .cadastrar-produtos form{
+  .cadastrarprodutos form{
     margin-bottom: 20px;
   }
-  .lista-produtos{
+  .listaprodutos{
     display: block;
     background-color: #bfc0c2;
     margin-bottom: 100px;
     display: flex;
     flex-direction: row; /* Alinhamento horizontal */
   }
-  .item-produto{
+  .itemproduto{
     display: block;
     border: 1px solid #000000;
     border-radius: 1px;
@@ -122,19 +120,16 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 30%;
   }
-  .item-produto img{
+  .itemproduto img{
     text-align: center;
     max-width: 100%;
     border-radius: 5px;
   }
-  .item-produto p{
+  .itemproduto p{
     margin: 5px 0;
   }
-  #btn-produtos{
+  #btnprodutos{
     align-self: flex-end;
      padding: 0;
    }
-   .cadastrar-produtos{
-     display: none;
-   }
-   
+ 
